[package]
name = "asdf-oxide"
version = "0.1.1"
edition = "2021"
description = "ASDF-oxide is a command-line utility that sorts pixels in images based on their brightness or color value."
license = "MIT"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.29", features = ["derive"] }
image = "0.25.5"
